dist/objects/npe01__OppPayment__c.object
<CustomObject>
    <fields>
        <fullName>AccountId__c</fullName>
        <formula>npe01__Opportunity__r.AccountId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ActualNonContactPay__c</fullName>
        <description>Created by Oscar @ Impact Box, 29/07/2020</description>
        <label>Actual Non-Contact Pay</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualPayChargeDifference__c</fullName>
        <description>Created by Oscar @ Impact Box, 16/07/2020</description>
        <formula>ActualSchoolCharge__c -  ActualTutorPay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Pay/Charge Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualSchoolCharge__c</fullName>
        <description>Created by Oscar @ Impact Box, 27/07/2020</description>
        <formula>(TotalTutoringHours__c * SchoolChargePerTutoringHour__c) - Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Discount Applied</inlineHelpText>
        <label>Actual School Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ActualTutorPay__c</fullName>
        <label>Actual Tutor Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Oscar @ Impact Box 16/07/2020</description>
        <label>Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <description>Created by Oscar @ Impact Box 29/07/2020</description>
        <formula>Contact__r.FirstName &amp; &quot; &quot; &amp;  Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactPay__c</fullName>
        <description>Created by Oscar @ Impact Box, 19/07/2020</description>
        <label>Actual Contact Pay</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Tutor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CreatedinlastDay__c</fullName>
        <description>`Created by Oscar @ Impact Box, 31/07/2020</description>
        <formula>AND(

DATEVALUE( CreatedDate ) &gt;= TODAY()-1,

NOT(DATEVALUE( CreatedDate ) &gt; TODAY()+1)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created in Last Day</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Created by Oscar @ Impact Box, 03/08/2020</description>
        <formula>IF( RecordType.DeveloperName = &apos;Incoming&apos;,  Cohort__r.Discount__c , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Taken from the Discount % applied to the Cohort</inlineHelpText>
        <label>Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>EngagementName__c</fullName>
        <description>Created by Oscar @ Impact Box, 22/07/2020</description>
        <formula>Engagement__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EngagementName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Engagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created By Oscar @ Impact Box 08/07/2020</description>
        <label>Tutor</label>
        <referenceTo>Engagement__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EstimatedSchoolCharge__c</fullName>
        <formula>EstimatedTutorPay__c *  SchoolChargePerTutoringHour__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated School Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EstimatedTutorPay__c</fullName>
        <label>Estimated Tutor Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ForecastPayChargeDifference__c</fullName>
        <description>Created by Oscar @ Impact Box 16/07/2020</description>
        <formula>ActualSchoolCharge__c - EstimatedTutorPay__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Pay/ Charge Difference</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FunderName__c</fullName>
        <description>Created by Oscar @ Impact Box, 22/07/2020</description>
        <formula>Funder__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funder Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Oscar @ Impact Box, 22/07/2020</description>
        <inlineHelpText>The organisation that this payment will be invoiced to</inlineHelpText>
        <label>Funder</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <description>Created by Oscar @ Impact Box, 05/08/2020.</description>
        <label>Invoice Period Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceLineItemName__c</fullName>
        <description>Created by Oscar @ Impact Box, 06/08/2020</description>
        <formula>CASE( RecordType.DeveloperName, 

&apos;AdHoc&apos;,&apos;Other: &apos; &amp;  TEXT(PaymentFor__c),

&apos;Incoming&apos;, Cohort__r.Name ,

&apos;Outgoing&apos;, Engagement__r.Cohort__r.SchoolName__c &amp; &apos;: &apos; &amp; Engagement__r.Subject__c,

&apos;Error - Record type not found&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Line Item Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InvoiceSent__c</fullName>
        <description>Created by Oscar @ Impact Box 15/07/2020</description>
        <label>Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Oscar @ Impact Box, 15/07/2020</description>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LastDayofPaymentMonth__c</fullName>
        <formula>IF( MONTH(  npe01__Scheduled_Date__c ) = 12, 
DATE( YEAR( npe01__Scheduled_Date__c  ), 12, 31 ), 
DATE( YEAR( npe01__Scheduled_Date__c  ), MONTH( TODAY() ) + 1, 1) - 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Day of Payment Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Created by Oscar @ Impact Box, 30/07/2020</description>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PaymentFor__c</fullName>
        <description>Created by Oscar @ Impact Box, 29/07/2020</description>
        <label>Payment For</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tutoring</fullName>
                    <default>true</default>
                    <label>Tutoring</label>
                </value>
                <value>
                    <fullName>Travel Expenses</fullName>
                </value>
                <value>
                    <fullName>Office Work</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>DBS Charge</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PaymentMonthNum__c</fullName>
        <description>Created by Oscar @ Impact Box, 08/07/2020</description>
        <formula>IF( RecordType.DeveloperName = &apos;Incoming&apos;,

MONTH(  InvoiceDate__c ),

MONTH( npe01__Scheduled_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Month Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PaymentMonth__c</fullName>
        <description>Created by Oscar @ Impact Box 08/07/2020</description>
        <formula>CASE(  PaymentMonthNum__c,

1,&apos;January&apos;,
2,&apos;February&apos;,
3,&apos;March&apos;,
4,&apos;April&apos;,
5,&apos;May&apos;,
6,&apos;June&apos;,
7,&apos;July&apos;,
8,&apos;August&apos;,
9,&apos;September&apos;,
10,&apos;October&apos;,
11,&apos;November&apos;,
12,&apos;December&apos;,

&apos;ERROR&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentYear__c</fullName>
        <description>Creatd by Oscar @ Impact Box, 22/02/2020</description>
        <formula>IF( RecordType.DeveloperName = &apos;Incoming&apos;,

TEXT(YEAR( InvoiceDate__c )),

TEXT(YEAR( npe01__Scheduled_Date__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchoolChargeBeforeDiscount__c</fullName>
        <description>Created by Oscar @ Impact Box, 03/08/2020</description>
        <formula>TotalTutoringHours__c *  SchoolChargePerTutoringHour__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School Charge Before Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SchoolChargeMultiplier__c</fullName>
        <label>School Charge Multiplier</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SchoolChargePerTutoringHour__c</fullName>
        <description>Created by Oscar @ Impact Box 16/07/2020</description>
        <label>School Charge Per Hour</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Oscar @ Impact Box, 30/07/2020</description>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payments (School)</relationshipLabel>
        <relationshipName>SchoolPayments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TotalHours__c</fullName>
        <description>Created by Oscar @ Impact Box, 18/08/2020</description>
        <formula>TotalNonContactHours__c + TotalTutoringHours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalNonContactHours__c</fullName>
        <description>Created by Oscar @ Impact Box, 27/07/2020. Populated by DLRS</description>
        <label>Total Non-Contact Hours</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalTutoringHours__c</fullName>
        <description>Created by Oscar &amp; Impact Box, 15/07/2020</description>
        <label>Total Tutoring Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TutorContactId__c</fullName>
        <formula>Engagement__r.Tutor__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TutorContactId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Check_Reference_Number__c</fullName>
        <label>Check/Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Custom_Payment_Field__c</fullName>
        <label>Custom Payment Field</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npe01__Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>OppPayment</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>npe01__Paid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npe01__Payment_Amount__c</fullName>
        <label>Payment Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npe01__Payment_Date__c</fullName>
        <label>Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npe01__Scheduled_Date__c</fullName>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npe01__Written_Off__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Written Off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Authorized_Date__c</fullName>
        <description>The date and time the transaction was authorized.</description>
        <inlineHelpText>The date and time the transaction was authorized.</inlineHelpText>
        <label>Authorized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npsp__Authorized_UTC_Timestamp__c</fullName>
        <description>The exact date and time (down to the millisecond) from the payment gateway that this transaction was successfully authorized.</description>
        <inlineHelpText>The exact date and time (down to the millisecond) from the payment gateway that this transaction was successfully authorized.</inlineHelpText>
        <label>Authorized UTC Timestamp</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Card_Expiration_Month__c</fullName>
        <description>The expiration month of the card used for this transaction.</description>
        <inlineHelpText>The expiration month of the card used for this transaction.</inlineHelpText>
        <label>Card Expiration Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Card_Expiration_Year__c</fullName>
        <description>The expiration year of the card used for this transaction.</description>
        <inlineHelpText>The expiration year of the card used for this transaction.</inlineHelpText>
        <label>Card Expiration Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Card_Last_4__c</fullName>
        <description>The last four digits of the card used for this transaction.</description>
        <inlineHelpText>The last four digits of the card used for this transaction.</inlineHelpText>
        <label>Card Last 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Card_Network__c</fullName>
        <description>The card network of the card used for this transaction.</description>
        <inlineHelpText>The card network of the card used for this transaction.</inlineHelpText>
        <label>Card Network</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Donor_Cover_Amount__c</fullName>
        <description>The amount the donor paid in addition to their donation amount, often to help cover transaction fees or to add a tip to their donation.</description>
        <inlineHelpText>The amount the donor paid in addition to their donation amount, often to help cover transaction fees or to add a tip to their donation.</inlineHelpText>
        <label>Donor Cover Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>npsp__Elevate_Original_Payment_ID__c</fullName>
        <description>For refunds only. Shows the ID of the original payment transaction from Elevate.</description>
        <inlineHelpText>For refunds only. Shows the ID of the original payment transaction from Elevate.</inlineHelpText>
        <label>Elevate Original Payment ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Elevate_Payment_Created_Date__c</fullName>
        <description>The date and time the transaction was created.</description>
        <inlineHelpText>The date and time the transaction was created.</inlineHelpText>
        <label>Elevate Payment Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npsp__Elevate_Payment_Created_UTC_Timestamp__c</fullName>
        <description>The exact date and time (down to the millisecond) from Elevate that the transaction was created.</description>
        <inlineHelpText>The exact date and time (down to the millisecond) from Elevate that the transaction was created.</inlineHelpText>
        <label>Elevate Payment Created  UTC Timestamp</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Elevate_Payment_ID__c</fullName>
        <description>The unique ID for this transaction from Elevate.</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique ID for this transaction from Elevate.</inlineHelpText>
        <label>Elevate Payment ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Gateway_ID__c</fullName>
        <description>The ID of the payment gateway that processed this transaction.</description>
        <inlineHelpText>The ID of the payment gateway that processed this transaction.</inlineHelpText>
        <label>Gateway ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Gateway_Payment_ID__c</fullName>
        <description>The unique ID for this transaction from the payment gateway.</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique ID for this transaction from the payment gateway.</inlineHelpText>
        <label>Gateway Payment ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Origin_ID__c</fullName>
        <description>The ID for the system where the transaction was initiated.</description>
        <inlineHelpText>The ID for the system where the transaction was initiated.</inlineHelpText>
        <label>Origin ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Origin_Name__c</fullName>
        <description>The name of the system where the transaction was initiated.</description>
        <inlineHelpText>The name of the system where the transaction was initiated.</inlineHelpText>
        <label>Origin Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Origin_Type__c</fullName>
        <description>The type of system used to initiate the transaction. Available values include Engagement Hub, Giving Page, Payments API, Salesforce.</description>
        <inlineHelpText>The type of system used to initiate the transaction. Available values include Engagement Hub, Giving Page, Payments API, Salesforce.</inlineHelpText>
        <label>Origin Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Acknowledged_Date__c</fullName>
        <description>Used to track date opportunity was acknowledged</description>
        <inlineHelpText>Date of acknowledgment</inlineHelpText>
        <label>Payment Acknowledged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>npsp__Payment_Acknowledgment_Status__c</fullName>
        <description>Status of Acknowledgment of this payment.</description>
        <inlineHelpText>Status of Acknowledgment of this payment.</inlineHelpText>
        <label>Payment Acknowledgment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>To Be Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Do Not Acknowledge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>npsp__Type__c</fullName>
        <description>Indicates the type of transaction.</description>
        <inlineHelpText>Indicates the type of transaction.</inlineHelpText>
        <label>Type</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Payment</label>
    <listViews>
        <fullName>All_Payments</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>npe01__Scheduled_Date__c</columns>
        <columns>Invoice__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Payments</label>
    </listViews>
    <listViews>
        <fullName>Incoming</fullName>
        <columns>NAME</columns>
        <columns>Funder__c</columns>
        <columns>Invoice__c</columns>
        <columns>npe01__Payment_Amount__c</columns>
        <columns>npe01__Scheduled_Date__c</columns>
        <columns>ActualSchoolCharge__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>npe01__OppPayment__c.Incoming</value>
        </filters>
        <label>Incoming</label>
    </listViews>
    <listViews>
        <fullName>Outgoing</fullName>
        <columns>NAME</columns>
        <columns>npe01__Opportunity__c</columns>
        <columns>Funder__c</columns>
        <columns>Invoice__c</columns>
        <columns>npe01__Payment_Amount__c</columns>
        <columns>npe01__Scheduled_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>npe01__OppPayment__c.Outgoing</value>
        </filters>
        <label>Outgoing</label>
    </listViews>
    <nameField>
        <displayFormat>PMT-{00000}</displayFormat>
        <label>Payment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <recordTypes>
        <fullName>AdHoc</fullName>
        <active>true</active>
        <description>For Ad-Hoc additions and deductions</description>
        <label>Ad-Hoc</label>
    </recordTypes>
    <recordTypes>
        <fullName>Incoming</fullName>
        <active>true</active>
        <label>Incoming</label>
    </recordTypes>
    <recordTypes>
        <fullName>Outgoing</fullName>
        <active>true</active>
        <label>Outgoing</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>